# viot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  docker-compose.yml
app/: .gitignore  (+9 more)
viot/: .test.env  README.md  alembic.ini  mqtt_whitelist  pyproject.toml
viot/app/: __init__.py  bootstrap.py  config.py  main.py  models.py  routes.py
viot/app/celery_worker/: celery.py  config.py  module.py
viot/app/celery_worker/tasks/: email.py  enums.py
viot/app/common/: controller.py  logging.py
viot/app/common/dto/: __init__.py  base.py  paging.py  types.py
viot/app/common/exception/: __init__.py  base.py  constant.py  handler.py
viot/app/common/fastapi/: __init__.py  context.py  dependency.py  open_api.py  serializer.py
viot/app/database/: base.py  config.py  context.py  dependency.py  engine.py  mixin.py  module.py
viot/app/database/migrations/: env.py  repository.py
viot/app/database/migrations/versions/: 2024-08-14_14-50_f8704f181c76_init_schemas.py  (+20 more)
viot/app/database/repository/: __init__.py  crud.py  pagination.py
viot/app/extension/email/: config.py  enums.py  exceptions.py  utils.py
viot/app/extension/redis/: client.py  config.py  module.py
viot/app/module/auth/: config.py  constant.py  constants.py  controller.py  dependency.py  dto.py  exception.py  model.py  module.py  permission.py  repository.py  service.py  token.py  utils.py
viot/app/module/device/: constants.py  module.py
viot/app/module/device_data/: constants.py  mapper.py  module.py  sql_queries.py
viot/app/module/email/: module.py  service.py
viot/app/module/emqx/: config.py  module.py
viot/app/module/rule_action/: constants.py  module.py
viot/app/module/team/: constant.py  constants.py  controller.py  dependency.py  dto.py  model.py  module.py  projection.py  repository.py  service.py
viot/app/module/team_invitation/: controller.py  dto.py  exception.py  model.py  module.py  repository.py  service.py
viot/app/module/user/: constant.py  controller.py  dto.py  model.py  module.py  repository.py  service.py
viot/scripts/: lint.sh  start-celery.sh  test.sh
viot/tests/: conftest.py
viot/tests/database/: test_repository.py
viot/tests/fixtures/: factories.py  mock_fastapi_depends.py  mock_model.py  mock_repository.py  models.py  service.py
viot/tests/module/device_data/: test_mapper.py
viot/tests/utils/: email.py  load_env.py  testcontainers.py  user_token.py
(+205 files in other folders)
